ghc-6.2/hslibs/win32/Win32Menu_stub_ffi.h

extern UINT prim_sC_SIZE();
extern UINT prim_sC_MOVE();
extern UINT prim_sC_MINIMIZE();
extern UINT prim_sC_MAXIMIZE();
extern UINT prim_sC_NEXTWINDOW();
extern UINT prim_sC_PREVWINDOW();
extern UINT prim_sC_CLOSE();
extern UINT prim_sC_VSCROLL();
extern UINT prim_sC_HSCROLL();
extern UINT prim_sC_MOUSEMENU();
extern UINT prim_sC_KEYMENU();
extern UINT prim_sC_ARRANGE();
extern UINT prim_sC_RESTORE();
extern UINT prim_sC_TASKLIST();
extern UINT prim_sC_SCREENSAVE();
extern UINT prim_sC_HOTKEY();
extern UINT prim_sC_DEFAULT();
extern UINT prim_sC_MONITORPOWER();
extern UINT prim_sC_CONTEXTHELP();
extern UINT prim_sC_SEPARATOR();
extern int prim_isMenu(HMENU arg1);
extern HMENU prim_getSystemMenu(HWND arg1,int arg2);
extern HMENU prim_getMenu(HWND arg1);
extern void* prim_getMenuDefaultItem(HMENU arg1,int arg2,UINT arg3);
extern UINT access_prim_getMenuDefaultItem_res1(HsPtr);
extern int access_prim_getMenuDefaultItem_gc_failed(HsPtr);
extern void* access_prim_getMenuDefaultItem_gc_failstring(HsPtr);
extern void* prim_getMenuState(HMENU arg1,UINT arg2,UINT arg3);
extern UINT access_prim_getMenuState_res(HsPtr);
extern int access_prim_getMenuState_gc_failed(HsPtr);
extern void* access_prim_getMenuState_gc_failstring(HsPtr);
extern HMENU prim_getSubMenu(HMENU arg1,UINT arg2);
extern void* prim_setMenu(HWND arg1,HMENU arg2);
extern int access_prim_setMenu_gc_failed(HsPtr);
extern void* access_prim_setMenu_gc_failstring(HsPtr);
extern void* prim_getMenuItemCount(HMENU arg1);
extern int access_prim_getMenuItemCount_res1(HsPtr);
extern int access_prim_getMenuItemCount_gc_failed(HsPtr);
extern void* access_prim_getMenuItemCount_gc_failstring(HsPtr);
extern void* prim_getMenuItemID(HMENU arg1,UINT arg2);
extern UINT access_prim_getMenuItemID_res1(HsPtr);
extern int access_prim_getMenuItemID_gc_failed(HsPtr);
extern void* access_prim_getMenuItemID_gc_failstring(HsPtr);
extern void* prim_unravelItemInfo(void * arg1);
extern UINT access_prim_unravelItemInfo_gc_res1(HsPtr);
extern UINT access_prim_unravelItemInfo_gc_res2(HsPtr);
extern UINT access_prim_unravelItemInfo_gc_res3(HsPtr);
extern HMENU access_prim_unravelItemInfo_gc_res4(HsPtr);
extern HBITMAP access_prim_unravelItemInfo_gc_res5(HsPtr);
extern HBITMAP access_prim_unravelItemInfo_gc_res6(HsPtr);
extern DWORD access_prim_unravelItemInfo_gc_res7(HsPtr);
extern char * access_prim_unravelItemInfo_gc_res9(HsPtr);
extern int access_prim_unravelItemInfo_gc_res10(HsPtr);
extern void* prim_mallocMenuItemInfo();
extern MENUITEMINFO* access_prim_mallocMenuItemInfo_mp(HsPtr);
extern int access_prim_mallocMenuItemInfo_gc_failed(HsPtr);
extern void* access_prim_mallocMenuItemInfo_gc_failstring(HsPtr);