ghc-6.2/hslibs/win32/Win32Menu.hs


foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_SIZE" sC_SIZE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_MOVE" sC_MOVE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_MINIMIZE" sC_MINIMIZE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_MAXIMIZE" sC_MAXIMIZE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_NEXTWINDOW" sC_NEXTWINDOW :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_PREVWINDOW" sC_PREVWINDOW :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_CLOSE" sC_CLOSE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_VSCROLL" sC_VSCROLL :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_HSCROLL" sC_HSCROLL :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_MOUSEMENU" sC_MOUSEMENU :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_KEYMENU" sC_KEYMENU :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_ARRANGE" sC_ARRANGE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_RESTORE" sC_RESTORE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_TASKLIST" sC_TASKLIST :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_SCREENSAVE" sC_SCREENSAVE :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_HOTKEY" sC_HOTKEY :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_DEFAULT" sC_DEFAULT :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_MONITORPOWER" sC_MONITORPOWER :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_CONTEXTHELP" sC_CONTEXTHELP :: SystemMenuCommand
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_sC_SEPARATOR" sC_SEPARATOR :: SystemMenuCommand

isMenu :: HMENU -> IO Bool
isMenu arg1 =
  prim_isMenu arg1
  >>= \  gc_res2  ->
  (unmarshall_bool_ gc_res2) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_isMenu" prim_isMenu :: Addr -> IO (Int)

getSystemMenu :: HWND -> Bool -> IO MbHMENU
getSystemMenu arg1 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg2) ->
  prim_getSystemMenu arg1 arg2
  >>= \  res1  ->
  (if nullHANDLE == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getSystemMenu" prim_getSystemMenu :: Addr -> Int -> IO (Addr)

getMenu :: HWND -> IO MbHMENU
getMenu arg1 =
  prim_getMenu arg1
  >>= \  res1  ->
  (if nullHANDLE == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenu" prim_getMenu :: Addr -> IO (Addr)

getMenuDefaultItem :: HMENU -> Bool -> GMDIFlag -> IO MenuItem
getMenuDefaultItem arg1 gc_arg1 arg3 =
  (marshall_bool_ gc_arg1) >>= \ (arg2) ->
  prim_getMenuDefaultItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getMenuDefaultItem_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getMenuDefaultItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuDefaultItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuDefaultItem" prim_getMenuDefaultItem :: Addr -> Int -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuDefaultItem_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuDefaultItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuDefaultItem_gc_failstring :: Addr -> IO (Addr)

getMenuState :: HMENU -> MenuItem -> MenuFlag -> IO MenuState
getMenuState arg1 arg2 arg3 =
  prim_getMenuState arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getMenuState_res (gc_result :: Addr) >>= \ res ->
  access_prim_getMenuState_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuState_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuState" prim_getMenuState :: Addr -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuState_res :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuState_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuState_gc_failstring :: Addr -> IO (Addr)


getSubMenu :: HMENU -> MenuItem -> IO MbHMENU
getSubMenu arg1 arg2 =
  prim_getSubMenu arg1 arg2
  >>= \  res1  ->
  (if nullHANDLE == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getSubMenu" prim_getSubMenu :: Addr -> Word32 -> IO (Addr)

setMenu :: HWND -> HMENU -> IO ()
setMenu arg1 arg2 =
  prim_setMenu arg1 arg2
  >>= \ gc_result ->
  access_prim_setMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_setMenu" prim_setMenu :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_setMenu_gc_failstring :: Addr -> IO (Addr)

getMenuItemCount :: HMENU -> IO Int
getMenuItemCount arg1 =
  prim_getMenuItemCount arg1
  >>= \ gc_result ->
  access_prim_getMenuItemCount_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getMenuItemCount_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuItemCount_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuItemCount" prim_getMenuItemCount :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemCount_res1 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemCount_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemCount_gc_failstring :: Addr -> IO (Addr)

type MenuID = UINT

getMenuItemID :: HMENU -> MenuItem -> IO MenuID
getMenuItemID arg1 arg2 =
  prim_getMenuItemID arg1 arg2
  >>= \ gc_result ->
  access_prim_getMenuItemID_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getMenuItemID_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getMenuItemID_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_getMenuItemID" prim_getMenuItemID :: Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemID_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemID_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_getMenuItemID_gc_failstring :: Addr -> IO (Addr)

data MenuItemInfo
 = MenuItemInfo  {
      menuItemType    :: MenuFlag,
      menuItemState   :: MenuState,
      menuItemID      :: UINT,
      menuItemSubMenu :: HMENU,
      menuItemBitmapChecked :: HBITMAP,
      menuItemBitmapUnchecked :: HBITMAP,
      menuItemData    :: DWORD,
      menuItemTypeData :: String
   }



marshall_menuItemInfo :: MenuItemInfo -> IO Addr
marshall_menuItemInfo (MenuItemInfo miType 
				    miState
				    miItemID
				    miSubMenu
				    miChecked
				    miUnchecked
				    miData
				    miTypeData) = do
  ptr <- mallocMenuItemInfo
  pstr <- marshall_string_ miTypeData
  assignMenuItemInfo ptr
                     miType miState miItemID miSubMenu 
                     miChecked miUnchecked miData pstr (length miTypeData)
  return ptr

unmarshall_menuItemInfo :: Addr -> IO MenuItemInfo
unmarshall_menuItemInfo ptr = do
   mi <- unravelItemInfo ptr
   free ptr
   return mi

unravelItemInfo :: Addr -> IO MenuItemInfo
unravelItemInfo arg1 =
  prim_unravelItemInfo arg1
  >>= \ gc_result ->
  access_prim_unravelItemInfo_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_unravelItemInfo_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_unravelItemInfo_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_unravelItemInfo_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_unravelItemInfo_gc_res5 (gc_result :: Addr) >>= \ gc_res5 ->
  access_prim_unravelItemInfo_gc_res6 (gc_result :: Addr) >>= \ gc_res6 ->
  access_prim_unravelItemInfo_gc_res7 (gc_result :: Addr) >>= \ gc_res7 ->
  access_prim_unravelItemInfo_gc_res9 (gc_result :: Addr) >>= \ gc_res9 ->
  access_prim_unravelItemInfo_gc_res10 (gc_result :: Addr) >>= \ gc_res10 ->
  (unmarshall_stringLen_ gc_res9 gc_res10) >>= \ gc_res8 ->
  (return ((MenuItemInfo gc_res1 gc_res2 gc_res3 gc_res4 gc_res5 gc_res6 gc_res7 gc_res8)))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_unravelItemInfo" prim_unravelItemInfo :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res1 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res2 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res3 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res4 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res5 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res6 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res7 :: Addr -> IO (Word32)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res9 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_unravelItemInfo_gc_res10 :: Addr -> IO (Int)

mallocMenuItemInfo :: IO Addr
mallocMenuItemInfo =
  prim_mallocMenuItemInfo
  >>= \ gc_result ->
  access_prim_mallocMenuItemInfo_mp (gc_result :: Addr) >>= \ mp ->
  access_prim_mallocMenuItemInfo_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_mallocMenuItemInfo_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (mp))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_mallocMenuItemInfo" prim_mallocMenuItemInfo :: IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_mallocMenuItemInfo_mp :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_mallocMenuItemInfo_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_mallocMenuItemInfo_gc_failstring :: Addr -> IO (Addr)
